--- a/public/stat120/Day16.Rmd
+++ b/public/stat120/Day16.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Inference for Single Proportions using the Normal Distribution"
+title: "Hypothesis Tests and Confidence Intervals using Normal Distribution!"
 subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
@@ -97,7 +97,7 @@ class: title-slide, middle
 background-position: 10% 90%, 100% 50%
 background-size: 160px, 100% 100%
 
-# .fancy[Inference for Single Proportions using the Normal Distribution]
+# .fancy[Hypothesis Tests and Confidence Intervals using Normal Distribution!]
 
 ### .fancy[Stat 120]
 
@@ -108,16 +108,156 @@ background-size: 160px, 100% 100%
 
 class: middle
 
-# Background
+# How do Malaria parasites impact mosquito behavior?
+.pull-left[
+<center>
+<img src="images/mosquito.png" width="100%" height="100%"> <br>
+</center>
+]
+.pull-right[
+<br>
+.bq.font90[
+- This experiment looks at the behavior of mosquito when exposed to malaria infected mice and healthy mice. 
+- The parasites go through two stages: not yet infectious (Days 1-8) and infectious (Days 9-28). 
+]
+
+]
+
+---
+
+class: middle
+
+ # Malaria Parasites and Mosquitoes
+
+.bql.font80[
+- The response variable is whether the mosquito approached a human in a cage with them. 
+- The experiment looks to see if this behavior differs by exposed vs control, and if it differs by infection stage. 
+
+]
+
+.footnote[Cator LJ, George J, Blanford S, Murdock CC, Baker TC, Read AF, Thomas MB. (2013). [‘Manipulation’ without the parasite: altered feeding behaviour of mosquitoes is not dependent on infection with malaria parasites](http://www.thereadgroup.net/wp-content/uploads/Cator-et-al.-2013-PRSB-eprint.pdf). Proc R Soc B 280: 20130711. ]
+
+---
+
+class: middle
+
+ # Malaria Parasites and Mosquitoes
+
+.bql[
+Malaria parasites would benefit if:
+- Mosquitoes approached humans less often after being exposed, but before becoming infectious, because humans are risky 
+- Mosquitoes approached humans more often after becoming infectious, to pass on the infection
+]
 
 
-.bq[
-- Resampling inference methods like the bootstrap (CI) and randomization tests require the use of computers!
-- We can achieve the same using statistical theory
-- Why are most resampling distributions bell-shaped?
-- CLT: when n is big enough, means and proportions behave like a normal distribution.
-- Today we will compute SE using formulas derived from probability theory
-- The inference methods in ch. 6+ are “classical” methods that could be done just with pen and paper.
+---
+
+# Days 1-8
+
+.bql[
+We'll first look at the mosquitoes before they become infectious (days 1-8).
+
+$p_C:$ proportion of controls to approach human
+
+$p_E:$ proportion of exposed to approach human
+]
+
+What are the relevant hypotheses?
+
+A. $\mathrm{H}_0: p_{\mathrm{E}}=p_{\mathrm{C}}, \mathrm{H}_{\mathrm{a}}: p_{\mathrm{E}}<p_{\mathrm{C}}$
+
+в. $\mathrm{H}_0: p_{\mathrm{E}}=p_{\mathrm{C}}, \mathrm{H}_{\mathrm{a}}: p_{\mathrm{E}}>p_{\mathrm{C}}$
+
+c. $\mathrm{H}_0: p_{\mathrm{E}}<p_{\mathrm{C}}, \mathrm{H}_{\mathrm{a}}: p_{\mathrm{E}}=p_{\mathrm{C}}$
+
+D. $H_0: p_{\mathrm{E}}>p_{\mathrm{C}}, \mathrm{H}_{\mathrm{a}}: p_{\mathrm{E}}=p_{\mathrm{C}}$
+
+
+<details>
+<summary>.red[Click for answer]</summary>
+The correct answer is 3. (since there are five choices and we are randomly guessing)
+</details>
+
+
+---
+
+class: middle
+
+<center>
+<img src="images/day16-1.png" width="90%" height="90%"> <br>
+</center>
+
+
+<center>
+<div style="position: absolute; top: 10%; left: 20%;">
+<span style="content: '\2192'; font-size: 24px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>p&#770;<sub>E</sub> - p&#770;<sub>C</sub> = 20/113 - 36/117 = 0.177 - 0.308 = -0.131</b></p>
+</span>
+</div>
+</center>
+
+
+---
+
+class: middle
+
+
+<center>
+<img src="images/day16-2.png" width="90%" height="90%"> <br>
+</center>
+
+
+
+---
+
+class: middle
+
+
+.pull-left[
+
+<center>
+<img src="images/day16-31.png" width="90%" height="90%"> <br>
+</center>
+
+
+<center>
+<img src="images/day16-32.png" width="90%" height="90%"> <br>
+</center>
+
+
+]
+
+.pull-right[
+
+<center>
+<img src="images/day16-33.png" width="90%" height="90%"> <br>
+</center>
+
+
+<center>
+<img src="images/day16-34.png" width="90%" height="90%"> <br>
+</center>
+
+]
+
+--
+
+<center>
+<div style="position: absolute; top: 80%; left: 4%;">
+<span style="content: '\2192'; font-size: 30px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>What do you notice?</b></p>
+</span>
+</div>
+</center>
+
+---
+
+class: middle
+
+# Central Limit Theorem
+
+.bql[
+For random samples with a sufficiently large sample size, the distribution of sample statistics for a .red[mean] or a .red[proportion] is .bolder[normally distributed]
 ]
 
 
@@ -125,258 +265,470 @@ class: middle
 
 class: middle
 
-# Resampling vs. Classical methods
+# The catch: "sufficiently large sample size"
 
-.bq[
-- Resampling methods are intuitive and don’t require lots of statistical theory/background.
-- But in your research fields you will likely only see classical methods used
-- In the “olden days”, classical methods were the only thing taught in stats methods classes. 
-- Plus more advanced methods usually do rely on classical theory due to their complexity. 
+.bqt[
+
+- The .b[more skewed] the original distribution of data/population is, the larger $n$ has to be for the CLT to work
+- For quantitative variables that are not very skewed, $\boldsymbol{n} \geq \mathbf{3 0}$ is usually sufficient
+- For categorical variables, counts of .b[at least 10] within each category is usually sufficient
 ]
 
----
-
-# Quiz
-
-
-> The Central Limit Theorem applies to the distribution of the
-
-1. statistic
-2. parameter
-3. null value
-4. data
-5. standard error
-
-<br>
-<details>
-<summary>.red[Click for answer]</summary>
-The correct answer is 3. (since there are five choices and we are randomly guessing)
-</details>
 
 ---
 
-## Distribution of sample proportions
+class: middle
+
+# Which normal distribution should we use to approximate this?
 
 <center>
-<img src="images/day16-1.png" width="80%" height="60%"> <br>
+<img src="images/day16-4.png" width="80%" height="50%"> <br>
 </center>
 
----
-
-# The SE for a Sample Proportion
-
-The standard error for $\hat{p}$ is
-\begin{align*}
-S E_{\hat{p}}=\sqrt{\frac{p(1-p)}{n}}
-\end{align*}
-
-The larger the sample size, the smaller the SE
-
-For a sufficiently large sample size, the distribution of sample statistics for a mean or a proportion is normal
-
-One sample proportion: The sampling distribution for a sample proportion is approximately normally distributed:
-
-\begin{align*}
-\hat{p} \approx N\left(p, \sqrt{\frac{p(1-p)}{n}}\right)
-\end{align*}
-
-Need n large enough so np ≥ 10 and n(1 – p) ≥ 10 
-
----
-
-# Election polling
-
-President Biden won 52.4% of the popular vote in Minnesota in the 2020 election.
-
-If we had sampled 100 likely voters just prior to the election, what would be the SE for the sample proportion of voters for Biden?
-
-\begin{align*}
-S E=\sqrt{\frac{0.524 \times 0.476}{100}} \approx 0.05
-\end{align*}
-
----
-
-# Margin of Error 
-
-For a single proportion, what is the margin of error?
-
-\begin{align*}
-\hat{p} \pm z^* \times \sqrt{\frac{\hat{p}(1-\hat{p})}{n}}
-\end{align*}
-
-1. $\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$
-2. $z^* \times \sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$
-3. $2 \times z^* \times \sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$
-
+.pull-left[
+\begin{aligned}
+A. \quad & \mathrm{N}(0,-0.131) \\
+B. \quad& \mathrm{N}(0,0.056) \\
+C. \quad& \mathrm{N}(-0.131,0.056) \\
+D. \quad& \mathrm{N}(0.056,0)
+\end{aligned}
+]
+.pull-right[
 <br>
 <details>
 <summary>.red[Click for answer]</summary>
 The correct answer is 3. (since there are five choices and we are randomly guessing)
 </details>
+]
+
 
 ---
 
-# Margin of Error and Sample Size
 
-.pull-left[
-\begin{align*}
-M E=z^* \times \sqrt{\frac{\hat{p}(1-\hat{p})}{n}}
-\end{align*}
-
-
-\begin{align*}
-n=\left(\frac{z^*}{M E}\right)^2 \hat{p}(1-\hat{p})
-\end{align*}
-
-$$n \approx \frac{1}{M E^2}$$
-
-]
-
-.pull-right[
-
-
-
-You can choose your sample size in advance, depending on your desired margin of error!
-
-Given the formula for margin of error, solve for n.
-
-Neither $p$ nor $\hat{p}$ is known in advance. To be conservative, use $p=0.5$. For a $95 \%$ confidence interval, $z^* \approx 2$
-
-]
-
----
-
-# Margin of Error and p
+# Normal Distribution
 
 <center>
-<img src="images/day16-2.png" width="80%" height="60%"> <br>
-<div style="position: absolute; top: 20%; left: 70%;">
-<span style="content: '\2192'; font-size: 40px; color: #FF00FF; text-align: center; white-space: pre-line;">
-  <p>n &asymp; &<sup>-1</sup> &#x3BC;<sup>2</sup>E<sup>2</sup></p>
+<img src="images/day16-5.png" width="70%" height="40%"> 
+</center>
+
+--
+
+<center>
+<div style="position: absolute; top: 20%; left: 22%;">
+<span style="content: '\2192'; font-size: 30px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>N(0, 0.056)</b></p>
 </span>
 </div>
 </center>
 
+--
+
+.blue-h[We can compare the original statistic to this Normal distribution to find the p-value!]
 
 ---
 
-# Margin of Error and n
+class: middle
 
-$$n \approx \frac{1}{M E^2}$$
+# [Statkey](https://www.lock5stat.com/StatKey/index.html): p-value from N(null, SE)
 
-Suppose we want to estimate a proportion with a margin of error of 0.03 with 95% confidence. How large a sample size do we need?
+<center>
+<img src="images/day16-6.png" width="80%" height="50%"> 
+</center>
 
 
-1. About 100
-2. About 500
-3. About 1000
-4. About 5000
+---
 
-<br>
+class: middle
+
+# Connecting Normal model to hypothesis tests
+
+.bql[
+Suppose: randomization distribution is bell shaped.
+
+- Center: hypothesized null parameter value
+- Spread: the standard error given in the randomization graph (or by formula)
+- P-value: computed from the normal model the "usual" way - the chance of being as extreme, or more extreme, than the observed statistic.
+]
+
+---
+
+class: middle
+
+# Standardized Statistic
+
+> The standardized test statistic (also known as a z-statistic) is
+\begin{align*}
+z=\frac{\text { statistic }-\text { null }}{S E}
+\end{align*}
+
+
+.hljs[Calculating the number of standard errors a statistic is from the null lets us assess extremity on a common scale.]
+
+---
+
+class: middle
+
+# Malaria and Mosquitos
+
+> Does infecting mosquitoes with Malaria actually impact the mosquitoes’ behavior to favor the parasite?
+- After the parasite becomes infectious, do infected mosquitoes approach humans more often, so as to pass on the infection?
+
+
+---
+
+class: middle
+
+# Days 9 – 28
+
+For the data after the mosquitoes become infectious (Days $9-28$), what are the relevant hypotheses?
+
+\begin{align}
+\boldsymbol{p}_{C}: & \text{proportion of controls to approach human}\\ 
+\boldsymbol{p}_{E}: & \text{proportion of exposed to approach human}
+\end{align}
+
+\begin{aligned}
+A. \quad & \mathrm{H}_0: p_{\mathrm{E}}=p_{\mathrm{C}}, \mathrm{H}_{\mathrm{a}}: p_{\mathrm{E}}<p_{\mathrm{C}} \\
+B. \quad & \mathrm{H}_0: p_{\mathrm{E}}=p_{\mathrm{C}}, \mathrm{H}_{\mathrm{a}}: p_{\mathrm{E}}>p_{\mathrm{C}} \\
+C. \quad & \mathrm{H}_0: p_{\mathrm{E}}<p_{\mathrm{C}}, \mathrm{H}_{\mathrm{a}}: p_{\mathrm{E}}=p_{\mathrm{C}} \\
+D. \quad & \mathrm{H}_0: p_{\mathrm{E}}>p_{\mathrm{C}}, \mathrm{H}_{\mathrm{a}}: p_{\mathrm{E}}=p_{\mathrm{C}}
+\end{aligned}
+
+
 <details>
 <summary>.red[Click for answer]</summary>
 The correct answer is 3. (since there are five choices and we are randomly guessing)
 </details>
 
----
-
-# Election polling continued.. 
-
-What should n be to get a margin of error of 3%?
-
-\begin{gathered}
-0.03=2 \times \text { SE } \\
-0.015=S E=\sqrt{\frac{0.482 \times 0.518}{n}} \\
-n=\frac{0.524 \times 0.476}{0.015^2} \approx 1109
-\end{gathered}
 
 ---
 
-# Test for a Single Proportion: Standardized Test Stat and P-value
+class: middle
+
+# Before and after
+
+
+.pull-left[
+<center>
+<img src="images/day16-1.png" width="90%" height="90%"> 
+</center>
+]
+
+.pull-right[
+<center>
+<img src="images/day16-8.png" width="90%" height="90%"> 
+</center>
+]
+
+---
+
+class: middle
+
+
+# Is the difference significant?
+
+.pull-left[
+.bq[The difference in proportions is 0.151 and the standard error is 0.05.  Is this significant?
+
+A. Yes
+
+B. No
+
+]
+]
+
+.pull-right[
+<br>
+<center>
+<img src="images/day16-9.png" width="90%" height="90%"> 
+</center>
+]
+
+---
+
+class: middle
+
+# Malaria and Mosquitoes
+
+.bql[
+It appears that mosquitoes infected by malaria parasites do, in fact, behave in ways advantageous to the parasites!
+- Exposed mosquitos are less likely to approach before becoming infectious (so more likely to stay alive)
+- Exposed mosquitos are more likely to approach humans after becoming infectious (so more likely to pass on disease)
+]
+
+---
+
+class: middle
+
+# Formula for p-values Using N(0,1)
+<br>
+<br>
+.Large[
 \begin{align*}
-\mathrm{H}_0: & \quad p=p_0\\
-\mathrm{H}_A: & \quad p\neq p_0
+z=\frac{\text { sample statistic }-\text { null value }}{\text { SE }}
 \end{align*}
+]
 
-\begin{align*}
-z&=\frac{\hat{p} -p_0}{\sqrt{\frac{p_0\left(1-p_0\right)}{n}}}
-\end{align*}
+--
 
-.bq[If np0 ≥ 10 and n(1 – p0) ≥ 10, then the p-value can be computed as the area in the tail(s) of a standard normal beyond z.]
+<center>
+<div style="position: absolute; top: 35%; left: 35%;">
+<span style="content: '\2192'; font-size: 22px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>From original <br> data</b></p>
+</span>
+</div>
+</center>
 
+--
+
+<center>
+<div style="position: absolute; top: 40%; left: 62%;">
+<span style="content: '\2192'; font-size: 22px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>From H<sub>0</sub></b></p>
+</span>
+</div>
+</center>
+
+--
+
+
+<center>
+<div style="position: absolute; top: 60%; left: 45%;">
+<span style="content: '\2192'; font-size: 22px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>From <br>randomization <br>distribution0</sub></b></p>
+</span>
+</div>
+</center>
 
 ---
+
+class: middle
+
+# Connecting Normal model to Confidence Intervals
+
+.bql[
+Confidence Intervals
+- Suppose: bootstrap distribution is bell-shaped.
+- Center: sample statistic
+- Spread: the standard error given in the bootstrap graph (or by formula)
+]
+
+---
+
+class: middle
+
+# Connecting Normal model to Confidence Intervals
+
+
+> To get a $95 \%$ confidence interval we compute:
+$$statistic \pm 2(SE)$$
+
+.bql[
+Why 2 SE's?
+- $95 \%$ of all sample means fall within 2 SE's of the population mean*
+- The value 2 is a z-score!
+- Well, actually the precise z-score under a normal model is $z=1.96$ instead of 2 !
+]
+
+---
+
+class: middle
+
+# N(0,1) model
+
+<center>
+<img src="images/day16-10.png" width="80%" height="90%"> 
+</center>
+
+--
+
+<center>
+<div style="position: absolute; top: 40%; left: 62%;">
+<span style="content: '\2192'; font-size: 30px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>95% of all values fall within 1.96 SE’s of the mean</b></p>
+</span>
+</div>
+</center>
+
+---
+
+class: inverse
+
+# What if we wanted a 90% CI? What z-score should we use to get the margin of error?
+
+--
+
+.pull-left[
+<center>
+<img src="images/day16-11.png" width="80%" height="90%"> 
+</center>
+
+```{r}
+qnorm(0.95)
+```
+
+90% Confidence: $z^*=1.645$
+
+
+]
+
+.pull-right[
+<center>
+<img src="images/day16-12.png" width="80%" height="90%"> 
+</center>
+```{r}
+qnorm(0.995)
+```
+99% Confidence: $z^*=2.576$
+
+]
+
+---
+
+class: middle
+
+# Confidence Interval using N(0,1)
+
+.bqt[
+If a statistic is normally distributed, we find a confidence interval for the parameter using
+$$statistic \pm z^* SE$$
+where the area between $-z^*$ and $+z^*$ in the standard normal distribution is the desired level of confidence.
+]
+
+---
+
+class: middle
 
 # Global Warming
 
-Do a majority of Americans believe in global warming?
+.bqt[
+What percentage of Americans believe in global warming?
 
-\begin{aligned}
-& H_0: p=0.50 \\
-& H_A: p>0.50
-\end{aligned}
+A survey on 2,251 randomly selected individuals conducted in October 2010 found that 1328 answered "Yes" to the question
 
-$$p=\text { proportion of all Americans who believe in global warming }$$
+.b.center["Is there solid evidence of global warming?"]
 
-> A survey on 2,251 randomly selected individuals conducted in October 2010 found that 1328 answered “Yes” to the question
-
-<br>
-
-.out-t[“Is there solid evidence of global warming?”]
-
-
-.footnote[Source: “Wide Partisan Divide Over Global Warming”, Pew Research Center, 10/27/10.s]
----
-
-# Is there solid evidence of global warming?
-
-.pull-left[
-Sample proportion:
-\begin{align*}
-\hat{p}=\frac{1328}{2251}=0.590
-\end{align*}
-.b[P-value:]
-```{r}
-1 - pnorm(8.54, 0, 1)
-```
-
-.bq.font80[
-P-value: proportion above z=8.54 on a N(0,1) curve.
-
-Yes, there is strong evidence that the percentage of Americans that believe in global warming is greater than 50% (z=8.51, p<0.0001).
-]
+Give and interpret a $95 \% \mathrm{CI}$ for the proportion of Americans who believe there is solid evidence of global warming.
 ]
 
-.pull-right[
-Standardized test stat:
-\begin{align*}
-z=\frac{0.590-0.50}{\sqrt{\frac{0.50(0.50)}{2251}}}=\frac{0.09}{0.0105}=8.54
-\end{align*}
 
-.b[C.I. for p:] $\hat{p} \pm z^* \sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$
 
-\begin{align*}
-0.59 \pm& 1.96 \sqrt{\frac{0.59 \times(1-0.59)}{2251}} \\
-0.59 \pm& 1.96 \times 0.0104 = (0.570,0.610)
-\end{align*}
-
-.bq[We are 95% confident that between 57% and 61% of Americans believe in global warming.]
-]
+.footnote[Source: “Wide Partisan Divide Over Global Warming”, Pew Research Center, 10/27/10. s]
 
 ---
 
-# Does this agree with the bootstrap CI? 
+class: middle
+
+<img src="images/day16-13.png" width="80%" height="90%"> 
+
+--
 
 <center>
-<img src="images/day16-3.png" width="70%" align = "left" height="60%"> <br>
-<div style="position: absolute; top: 20%; left: 70%;">
-<span style="content: '\2192'; font-size: 20px; color: #FF00FF; text-align: center; white-space: pre-line;">
-  <p><b> We are <em>95%</em> sure that <br> the true percentage of all Americans <br> that believe there is solid evidence <br> of global warming is between <br> <em>57.0%</em> and <em>61.0%</em>.</b></p>
+<div style="position: absolute; top: 30%; left: 7%;">
+<span style="content: '\2192'; font-size: 20px; color: blue; text-align: center; white-space: pre-line;">
+<p><b>0.59 +/- 1.96(0.01) = <br> (0.570, 0.610)</b></p>
 </span>
 </div>
 </center>
 
 
+--
+
+<center>
+<div style="position: absolute; top: 45%; left: 55%;">
+<span style="content: '\2192'; font-size: 26px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>We are 95% confident that the true percentage of all Americans that believe there is solid evidence of global warming is between 57.0% and 61.0%</b></p>
+</span>
+</div>
+</center>
+
+---
+
+class: middle
+
+# Global Warming
+
+.bql[What is a $90 \%$ confidence interval for the proportion of US adults who believe in global warming?
+
+$$0.59 \pm 1.645(0.01)=(0.574,0.606)$$]
+
+--
+
+<br>
+
+.bql[What is a $99 \%$ confidence interval? 
+
+$$0.59\pm2.576(0.01)=(0.564,0.616)$$]
+
+--
+
+.green-h[Remember, more confidence = wider interval. So how do these compare to the bootstrap CI ?]
+
+---
+
+class: middle
+
+# Global Warming: 90% CI
+
+<center>
+<img src="images/day16-14.png" width="70%" height="90%"> 
+</center>
+
+--
+
+<center>
+<div style="position: absolute; top: 25%; left: 21%;">
+<span style="content: '\2192'; font-size: 20px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>Normal curve: 
+0.59 +/- 1.645(0.01) <br>= (0.574, 0.606)</b></p>
+</span>
+</div>
+</center>
+
+--
+
+
+<center>
+<div style="position: absolute; top: 25%; left: 61%;">
+<span style="content: '\2192'; font-size: 20px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>Bootstrap %-tile:
+ (0.573, 0.608)</b></p>
+</span>
+</div>
+</center>
+
+---
+
+class: middle
+
+# Global Warming: 99% CI
+
+<center>
+<img src="images/day16-15.png" width="70%" height="90%"> 
+</center>
+
+--
+
+<center>
+<div style="position: absolute; top: 25%; left: 21%;">
+<span style="content: '\2192'; font-size: 20px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>Normal curve:
+0.59 +/- 2.576(0.01) <br>= (0.564, 0.616)</b></p>
+</span>
+</div>
+</center>
+
+--
+
+
+<center>
+<div style="position: absolute; top: 25%; left: 61%;">
+<span style="content: '\2192'; font-size: 20px; color: #FF00FF; text-align: center; white-space: pre-line;">
+<p><b>Bootstrap %-tile:
+ (0.563, 0.617)</b></p>
+</span>
+</div>
+</center>
 
 ---
 
@@ -391,18 +743,11 @@ class: action
 <br>
 .bq[
 
-Randomly choose a letter from A B C D E and write it down (don’t show anyone!)
-
-Find a partner, telepathically communicate your letter (no auditory or visual clues!) and have them guess your
-letter.
-
-Repeat a couple of times then switch roles.
-
+Please go over the class activity 16 
 
 ]
 
-.out-t[How often did you guess correctly?]
 ]
 
-`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
